k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transport-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: transport-prod
